--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,27 @@ branches:
   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 
 language: cpp
+
 python:
   - "3.6"
 
+cache:
+  apt: true
+
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
 before_install:
+  - eval "${MATRIX_EVAL}"
   - sudo apt-get update
   - sudo apt-get install python3-dev libseccomp-dev
 
